@@ -17,9 +17,9 @@
 
 #define PACKAGE_BUGREPORT "vdorie@gmail.com"
 #define PACKAGE_NAME "dbarts"
-#define PACKAGE_STRING "dbarts 0.9.18"
+#define PACKAGE_STRING "dbarts 0.9.19"
 #define PACKAGE_TARNAME "dbarts"
-#define PACKAGE_VERSION "0.9.18"
+#define PACKAGE_VERSION "0.9.19"
 
 #ifdef _WIN64
 #  define SIZEOF_SIZE_T 8
